<resources>
    <string name="app_name">File.io</string>
    <string name="uploading">Uploading</string>
    <string name="upload_success">Successfully uploaded</string>
    <string name="upload_error">Error uploading</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="error_uploading">Upload error. Tap to retry</string>
    <string name="upload_finished">Upload complete</string>
    <string name="file_expired">expired</string>
    <string name="icon_description">icon</string>
    <string name="upload_file">Upload a file</string>
    <string name="no_data_available">You dont have any uploads. Try uploading files with the upload button below</string>
    <string name="delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="expires_in">Expires in %d days</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_data_available_widget">You dont have any uploads available</string>
    <string name="banner_ad_unit_id">ca-app-pub-8409882999421836/7470771700</string>
    <string name="files">Uploaded Files</string>
    <string name="no_internet">Please connect to the internet</string>
    <string name="file_desc">File Description</string>
    <string name="about">File.io is an easy ephemeral file sharing app that lets you upload any file up to 5GB size and share anonymously. The file is immediately deleted after once downloaded
        \nThis app uses the service provided by www.file.io
        \nBy using this app you agree to the terms and conditions mentioned at https://www.file.io/tos.html
    \n\nHow to use:
    \n1)Select a file using the button on home screen
    \n2)Track the progress at the notification
    \n3)When uploaded, you can share the link to anyone\nNote: While sharing, avoid using services with preview(like whatsapp) because it causes the file to be downloaded and no longer accessible).</string>
    <string name="action_about">About</string>
    <string name="share_link">Share this file</string>
    <string name="desc">Description</string>
</resources>
