<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clouds"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_file_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/clouds"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="sakethkaparthi.fileio.activities.FileDescriptionActivity">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                app:cardElevation="4dp">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/file_icon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/icon_description" />


                    <TextView
                        android:id="@+id/file_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="false"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="false"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@+id/file_icon"
                        android:textColor="@color/black"
                        tools:text="File name" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/description_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_layout"
                android:contentDescription="@string/desc"
                android:text="@string/desc"
                android:textColor="@color/black" />

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_heading"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/upload_date_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/file_link_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:autoLink="web"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/file_expiry_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/black" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/file_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_view"
                android:layout_marginTop="20dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/delete"
                android:drawableStart="@drawable/ic_delete"
                android:paddingEnd="50dp"
                android:paddingStart="20dp"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>